<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <com.loopeer.cardstack.CardStackView
        android:id="@+id/recycler"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="173.5dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:stackAnimationType="upDownStack"
        app:stackOverlapGaps="40dp" />

    <RelativeLayout
        android:id="@+id/lin1"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="30dp"
        android:background="@color/white"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">
        <TextView
            android:id="@+id/gnma_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/yc_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black70"
            android:textSize="16sp"
            android:layout_below="@id/gnma_txt"
            android:text="@string/y" />
        <ImageButton
            android:id="@+id/add_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="0dp"
            android:padding="10dp"
            android:background="@drawable/back_btn_ripple"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_plus" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/lin2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lin1"
        android:layout_marginStart="20dp"
        android:background="@color/white"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp">
        <ImageView
            android:id="@+id/img1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_search"/>

        <EditText
            android:id="@+id/search_edittext"
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_toEndOf="@+id/img1"
            android:hint="@string/enter_card_name"
            android:maxLength="20"
            android:textCursorDrawable="@drawable/back_cursor"
            android:textColorHint="@color/black30"
            android:textColorHighlight="@color/black30"
            android:background="@color/white"
            android:textColor="@color/black"
            android:textSize="16sp"/>
        <View
            android:id="@+id/search_line"
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_below="@+id/img1"
            android:layout_marginTop="5dp"
            android:background="@drawable/back_line_basic"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/no_found_window"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lin2"
        android:layout_alignBottom="@id/recycler"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:visibility="gone"
        android:layout_marginBottom="0dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <ImageView
                android:id="@+id/img2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_card" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/img2"
                android:text="@string/no_cards_found"
                android:textColor="@color/black70"
                android:textSize="18sp" />
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>