<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:id="@+id/rel1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">
        <TextView
            android:id="@+id/card_name_on_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black70"
            android:textSize="16sp"
            android:layout_below="@id/card_name_on_card"
            android:text="@string/information_about_card" />

        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="0dp"
            android:padding="10dp"
            android:background="@drawable/back_btn_ripple"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_arrow" />
    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv1"
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:layout_below="@+id/rel1"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="30sp"
        app:cardElevation="15dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_marginTop="140dp"
            app:cardCornerRadius="30sp"
            app:cardElevation="0dp">

            <RelativeLayout
                android:id="@+id/barcode_background"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white">

                <ImageView
                    android:id="@+id/barcode_image"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="220dp"
            app:cardCornerRadius="30sp"
            app:cardElevation="0dp">

            <RelativeLayout
                android:id="@+id/card_background"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/card_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textColor="@color/black70"
                    android:textSize="26sp"
                    android:maxLength="20"
                    android:textCursorDrawable="@drawable/back_cursor"
                    android:padding="20dp"
                    android:background="#00000000"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </androidx.cardview.widget.CardView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cv1"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp">

        <TextView
            android:id="@+id/tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/barcode_data_2"
            android:textColor="@color/black70"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/barcode_data_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv2"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/delete_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:paddingStart="50dp"
        android:paddingTop="20dp"
        android:paddingEnd="50dp"
        android:paddingBottom="20dp"
        android:text="@string/delete"
        android:textColor="@color/red"
        android:textSize="18sp" />
</RelativeLayout>